# HR-UDAN_OLD

./: README.md  add-advance-route.js  add-analytics.js  add-employee-routes.js  add-master-routes.js  add-more-master.js  add-more-routes.js  add-payroll-routes.js  add-system-routes.js  build-server.ts  check-port.js  check.txt  check_magic.cjs  clean-employee-index.js  clean-index.js  clean-master-commands-index.js  clean-master-index.js  clean-more.js  clean-payroll-index.js  clean-system-index.js  delete_recovered.cjs  do-cp.js  do-refactor-safe.js  eslint.config.js  fix-advance-hook.js  fix-modal.js  fix-params.js  fix-query.js  fix-repo.js  fix-rpc.js  fix-rpc2.js  fix-rpc3.js  fix-rpc4.js  fix-rpc5.js  fix-rpc6.js  fix-rpc7.js  fix-rpc8.js  fix-rpc9.js  fix-types.js  fix.js  (+48 more)
Documentation/: attendance-optimization-notes.md  memory.md  redundancy_audit.md
data/: README.md  primary.db-wal  primary.db.corrupted  statutory.db.corrupted  statutory.db.corrupted2
dist-server/: server.cjs
docs/: duckdb-attendance-analytics.md  sqlite-optimization.md
scripts/: README.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260510000000_rbac_init.sql
src-tauri/src/: main.rs  scheduler.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/payroll/: mod.rs
src-tauri/src/payroll/k_engine/: mod.rs  salary_engine_daily_mis.rs  salary_engine_employee_master.rs  salary_engine_factory.rs
src-tauri/src/services/audit/: mod.rs
src-tauri/src/services/auth/: mod.rs
src-tauri/src/services/rbac/: resolver.rs
src-tauri/src/services/recovery/: mod.rs
(+433 files in other folders)
