[package]
name = "hr-udan-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "hr_udan_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
regex = "1.5"
odbc = "0.17"
calamine = "0.21" # For Excel reading if needed
chrono = "0.4"
rust_xlsxwriter = "0.65"
base64 = "0.21"
